# suntime-ics-distribution

./: .gitignore  .gitmodules  Makefile  README.md  index.html  manifest.json  sitemap.xml  vite-plugin-ssr.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflow/: build-deploy.yml
.github/workflows/: build-deploy.yml
assets/chunks/: chunk-1f3639a1.js  chunk-4bdcce55.js  chunk-54f49186.js  chunk-5f9ea4bd.js  chunk-60315516.js  chunk-622bc554.js  chunk-6f873f08.js  chunk-7a5279b2.js  chunk-7cb7fa48.js  chunk-8870c9e9.js  chunk-afb39c6a.js  chunk-c9f09a50.js  chunk-ced3e1b0.js  chunk-d12669a7.js  chunk-e33fb4e3.js  chunk-e58dea07.js
assets/entries/: entry-client-routing.621a2998.js  entry-client-routing.8447f5f6.js  entry-server-routing.a5fd70c9.js  entry-server-routing.ff8507b8.js  pages_index_index.page.458475cb.js  pages_index_index.page.74d19d02.js  pages_japan_-pref_code.page.1d9a3e21.js  pages_japan_-pref_code.page.a0872a24.js  pages_world_-country_code.page.3d06baa7.js  pages_world_-country_code.page.7c79533b.js  renderer_default.page.client.cecfd552.js  renderer_default.page.client.d507229f.js
data/json/: japan.json  world.json
data_persistent/: japan.json  prefectures.csv
japan/1/: index.html
japan/10/: index.html
japan/11/: index.html
japan/12/: index.html
japan/13/: index.html
japan/14/: index.html
japan/15/: index.html
japan/16/: index.html
scripts/: generate_japan.json.py  generate_world.json.py  pyproject.toml
website/: .gitignore  generate_sitemap.ts  package.json  template.html  tsconfig.json  vite.config.ts
(+997 files in other folders)
